# topgrade_i18n_locale_checker

./: .gitignore  Cargo.toml  README.md
.github/: ci.yml
src/: checker.rs  cli_opt.rs  locale_file_parser.rs  locale_key_collector.rs  main.rs  parse.rs
src/check/: missing_translations.rs  mod.rs
src/rules/: key_and_en_matches.rs  key_and_eng_matches.rs  missing_translations.rs  mod.rs  use_of_keys_do_not_exist.rs
