[package]
name = "topgrade_i18n_locale_file_checker"
version = "0.1.0"
edition = "2021"

[dependencies]
bitflags = "2.6.0"
clap = { version = "4.5.19", features = ["derive"] }
indexmap = "2.2.6"
once_cell = "1.19.0"
proc-macro2 = { version = "1.0.86", features = ["span-locations"] }
serde_yaml_ng = "0.10.0"
syn = { version = "2.0.79", features = ["full", "visit"] }
walkdir = "2.5.0"